index full info, missing change profile pics

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hola, soy</p>
         <h1 class="title">Mario Segundo Galindo</h1>
-        <p class="section__text__p2">Software Developer</p>
+        <p class="section__text__p2">Back-End Developer</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -60,13 +60,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://www.linkedin.com/in/mario-segundo-galindo-2720b132a/'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/elucifurr'"
           />
         </div>
       </div>
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Experiencia</h3>
-              <p>1 año <br />Desarrollo de software</p>
+              <p>1 año <br />Desarrollador web<br /> 1 año <br />Profesor de programación</p>
             </div>
             <div class="details-container">
               <img
@@ -100,17 +100,15 @@
                 class="icon"
               />
               <h3>Educación</h3>
-              <p>Grado en Ingeniería Informática<br />Certificación Ingles B2</p>
+              <p>Grado en Ingeniería Informática<br />Certificación Ingles B2<br />Certificación Cisco CCNA<br />
+                  Curso Microservicios Docker</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              Ingeniero Informático con conocimientos en Desarrollo de software, Desarrollo Web, Gestión de base de datos, Desarrollo de
+              aplicaciones móviles, Pruebas de software, Seguridad de datos, Inteligencia Artificial y Machine Learning. Me
+              encanta la tecnología y las novedades de software, de sistemas operativos de escritorio y móviles.
             </p>
           </div>
         </div>
@@ -128,7 +126,7 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Software Development</h2>
+            <h2 class="experience-sub-title">Front-End Development</h2>
             <div class="article-container">
               <article>
                 <img
@@ -148,19 +146,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>CSS</h3>
+                  <h3>CSS SASS</h3>
                   <p>Básico</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>SASS</h3>
-                  <p>Intermedio</p>
                 </div>
               </article>
               <article>
@@ -171,18 +158,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Básico</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>TypeScript</h3>
-                  <p>Básico</p>
+                  <p>Intermedio</p>
                 </div>
               </article>
               <article>
@@ -196,10 +172,32 @@
                   <p>Intermedio</p>
                 </div>
               </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Bootstrap</h3>
+                  <p>Básico</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>React Js </h3>
+                  <p>Básico</p>
+                </div>
+              </article>
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Software Development</h2>
+            <h2 class="experience-sub-title">Back-end Development</h2>
             <div class="article-container">
               <article>
                 <img
@@ -208,8 +206,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>PostgreSQL</h3>
-                  <p>Básico</p>
+                  <h3>Python</h3>
+                  <p>Intermedio</p>
                 </div>
               </article>
               <article>
@@ -230,7 +228,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Express JS</h3>
+                  <h3>MongoDB</h3>
                   <p>Básico</p>
                 </div>
               </article>
@@ -241,7 +239,28 @@
                   class="icon"
                 />
                 <div>
+                  <h3>MySql</h3>
+                  <p>Intermedio</p>
+                </div>
+              </article><article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
                   <h3>Git</h3>
+                  <p>Intermedio</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Docker</h3>
                   <p>Intermedio</p>
                 </div>
               </article>
@@ -264,74 +283,32 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/polloasado.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Proyecto A</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Demo
-              </button>
-            </div>
+            <h2 class="experience-sub-title project-title">Web Freiduría Los Manolos</h2>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/booking.png"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Proyecto B</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Demo
-              </button>
-            </div>
+            <h2 class="experience-sub-title project-title">App reserva de salas</h2>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/hairsalon.png"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Proyecto C</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Demo
-              </button>
-            </div>
+            <h2 class="experience-sub-title project-title">Web salon de belleza y peluquería</h2>
           </div>
         </div>
       </div>
@@ -360,7 +337,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/mario-segundo-galindo-2720b132a/">LinkedIn</a></p>
         </div>
       </div>
     </section>
